--- a/index.html
+++ b/index.html
@@ -440,20 +440,20 @@
             </svg>
         </button>
   
-        <ul class="mobile-menu">
-            <ul class="mobile-menu-list">
-                <li class="mobile-menu-list-item"><a class="page-active" href="index.html">Studio</a></li>
-                <li class="mobile-menu-list-item"><a href="portfolio.html">Portfolio</a></li>
-                <li class="mobile-menu-list-item"><a href="">Contacts</a></li>
-            </ul>
-
-            <address class="mobile-menu-contacts">
-                <ul class="mobile-menu-contacts-list">
-                    <li class="mobile-menu-contacts-list-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                    <li class="mobile-menu-contacts-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <div class="mobile-menu">
+            <div class="mobile-menu-container">
+                <ul class="mobile-menu-list">
+                    <li class="mobile-menu-list-item"><a class="page-active" href="index.html">Studio</a></li>
+                    <li class="mobile-menu-list-item"><a href="portfolio.html">Portfolio</a></li>
+                    <li class="mobile-menu-list-item"><a href="">Contacts</a></li>
                 </ul>
-            </address>
-            
+
+                <address class="mobile-menu-contacts">
+                    <ul class="mobile-menu-contacts-list">
+                        <li class="mobile-menu-contacts-list-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                        <li class="mobile-menu-contacts-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    </ul>
+                </address>
             <ul class="mobile-menu-social-list ">
                 <li class="mobile-menu-social-list-item">
                     <a href="#">
@@ -484,7 +484,8 @@
                     </a>
                 </li>
             </ul>
-        </ul>
+            </div>  
+        </div>
     </div>
 
     <script src="./scripts/mobile-menu.js"></script>
