--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             <div class="container  about-container">
                 <h2 class="about-heading">What are we doing</h2>
                 <ul class="about-list">
-                    <li class="about-list-item"><img width="360" src="./images/Mac.jpg" alt="Desktop Websites Development Example"></li>
-                    <li class="about-list-item"><img width="360" src="./images/mobile-whats.jpg" alt="Mobile Apps Development"></li>
-                    <li class="about-list-item"><img width="360" src="./images/mobile-ex.jpg" alt="Mobile Devices Optimization for Websites"></li>
+                    <li class="about-list-item"><img width="360" srcset="./images/Mac.jpg 1x, ./images/mac-2x.jpg 2x" src="./images/Mac.jpg" alt="Desktop Websites Development Example"></li>
+                    <li class="about-list-item"><img width="360" srcset="./images/mobile-whats.jpg 1x, ./images/mobile-whats-2x.jpg 2x" src="./images/mobile-whats.jpg" alt="Mobile Apps Development"></li>
+                    <li class="about-list-item"><img width="360" srcset="./images/mobile-ex.jpg 1x, ./images/mobile-ex-2x.jpg 2x" src="./images/mobile-ex.jpg" alt="Mobile Devices Optimization for Websites"></li>
                 </ul>
             </div>
         </section>
@@ -117,7 +117,7 @@
                 <h2 class="team-heading">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-list-item">
-                        <img  src="./images/mark.jpg" alt="One of our team members" width="264">
+                        <img  srcset="./images/mark.jpg 1x, ./images/mark-2x.jpg 2x," src="./images/mark.jpg" alt="One of our team members" width="264">
                         <h3 class="team-list-item-name">Mark Guerrero</h3>
                         <p class="team-list-item-role">Product Designer</p>
                         <ul class="team-social-list">
@@ -153,7 +153,7 @@
                         </ul>
                     </li>
                     <li class="team-list-item">
-                        <img  src="./images/tom.jpg" alt="One of our team members" width="264">
+                        <img  srcset="./images/tom.jpg 1x, ./images/tom-2x.jpg 2x" src="./images/tom.jpg" alt="One of our team members" width="264">
                         <h3 class="team-list-item-name">Tom Ford</h3>
                         <p class="team-list-item-role">Frontend Developer</p>
                         <ul class="team-social-list">
@@ -189,7 +189,7 @@
                         </ul>
                     </li>
                     <li class="team-list-item">
-                        <img  src="./images/camila.jpg" alt="One of our team members" width="264">
+                        <img  srcset="./images/camila.jpg 1x, ./images/camila-2x.jpg 2x" src="./images/camila.jpg" alt="One of our team members" width="264">
                         <h3 class="team-list-item-name">Camila Garcia</h3>
                         <p class="team-list-item-role">Marketing</p>
                         <ul class="team-social-list">
@@ -225,7 +225,7 @@
                         </ul>
                     </li>
                     <li class="team-list-item">
-                        <img  src="./images/daniel.jpg" alt="One of our team members" width="264">
+                        <img  srcset="./images/daniel.jpg 1x, ./images/daniel-2x.jpg 2x" src="./images/daniel.jpg" alt="One of our team members" width="264">
                         <h3 class="team-list-item-name">Daniel Wilson</h3>
                         <p class="team-list-item-role">UI Designer</p>
                         <ul class="team-social-list">
@@ -266,7 +266,7 @@
         </section>
 
         <section class="customers">
-            <div class="container">
+            <div class="customers-container container">
                 <h2 class="customers-title">Customers</h2>
                 <ul class="customers-list">
                     <li class="customers-list-item">
