--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="container  about-container">
                 <h2 class="about-heading">What are we doing</h2>
                 <ul class="about-list">
-                    <li class="about-list-item"><img width="360" srcset="./images/Mac.jpg 1x, ./images/mac-2x.jpg 2x" src="./images/Mac.jpg" alt="Desktop Websites Development Example"></li>
+                    <li class="about-list-item"><img width="360" srcset="./images/Mac.jpg 1x, ./images/Mac-2x.jpg 2x" src="./images/Mac.jpg" alt="Desktop Websites Development Example"></li>
                     <li class="about-list-item"><img width="360" srcset="./images/mobile-whats.jpg 1x, ./images/mobile-whats-2x.jpg 2x" src="./images/mobile-whats.jpg" alt="Mobile Apps Development"></li>
                     <li class="about-list-item"><img width="360" srcset="./images/mobile-ex.jpg 1x, ./images/mobile-ex-2x.jpg 2x" src="./images/mobile-ex.jpg" alt="Mobile Devices Optimization for Websites"></li>
                 </ul>
