--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
                     <label class="pop-up-form-checkbox-label">
                         <input type="checkbox" class="pop-up-form-checkbox visuallyhidden">
-                        <span class="pop-up-check-text">I accept the terms and conditions of the  <a href="#"> Privacy Policy</a></span>
+                        <span class="pop-up-check-text"><span>I accept the terms and conditions of the  <a href="#"> Privacy Policy</a></span></span>
                     </label>
                     
                     <button class="pop-up-form-submit" type="submit" >Send</button>
